# release-maker

./: .editorconfig  Cargo.toml  README.md
src/: git.rs  main.rs  release.rs
texts/: example.json  explanation.txt  gotchas.txt
