[package]
name = "release-maker"
version = "0.2.0"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
edition = "2018"
description = "A utility tool to quickly create changelogs for Github releases"
license = "MIT"
homepage = "https://github.com/acdenisSK/release-maker"
repository = "https://github.com/acdenisSK/release-maker.git"
readme = "README.md"
include = ["src/*", "texts/*", "LICENSE.md", "README.md"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
clap = { version = "3.0.14", features = ["derive"] }
git2 = "0.13.25"
